# ctf-bindgen

./: .gitignore  Cargo.toml  README.md  build.rs
.github/buildomat/jobs/: build-and-test.sh
src/: ctf.rs  lib.rs  main.rs  report.rs  rsgen.rs
tests/: .gitignore  foo_test.rs  prepare.sh  run.sh
tests/c/: build.sh  foo.c
